--- a/Clima/.gitignore
+++ b/Clima/.gitignore
@@ -9,7 +9,8 @@
 .history
 .svn/
 migrate_working_dir/
-utilities/key.dart
+utilities/apikey.dart
+
 
 # IntelliJ related
 *.iml
@@ -32,6 +33,7 @@ utilities/key.dart
 .pub-cache/
 .pub/
 /build/
+
 
 # Symbolication related
 app.*.symbols
