feat: finish by adding input functionality and editing styles such as fonts, etc.

--- a/Clima/pubspec.yaml
+++ b/Clima/pubspec.yaml
@@ -28,3 +28,9 @@ flutter:
     - images/
 
   uses-material-design: true
+
+  fonts:
+  - family: Spartan MB
+    fonts:
+    - asset: fonts/SpartanMB-Black.otf
+      weight: 900
